# rust-solana

./: .gitignore  README.md
lottery-tickets/: README.md  package.json
lottery-tickets-anchor/: Anchor.toml
lottery-tickets-anchor/programs/lottery-tickets-anchor/: Cargo.toml
lottery-tickets-anchor/programs/lottery-tickets-anchor/src/: lib.rs
lottery-tickets-anchor/tests/: lottery-tickets-anchor.ts
lottery-tickets-native/: package.json
lottery-tickets-native/scripts/: cicd.sh
lottery-tickets-native/src/client/: app.ts  util.ts
lottery-tickets-native/src/ticket/: Cargo.toml
lottery-tickets-native/src/ticket/src/: lib.rs  numbers.rs
lottery-tickets/src/client/: numbers.ts
