[package]
name = "ticket"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "2.0.8"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "5.0.1", features = ["no-entrypoint"] }
borsh = "1.5.1"

[dev-dependencies]
solana-program-test = "2.0.8"

[lib]
crate-type = ["cdylib", "lib"]